--- a/index.html
+++ b/index.html
@@ -12,22 +12,28 @@
   <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
-    <div class="timer">Time: <span id="time">0</span></div>
-
+    <div class="timer" id="timer">Time: 0</div>
     <div class="wrapper">
+      <div id="image-holder" class="start">
+        <img src="./assets/images/globe_flag.png" alt="Flags" width="400" height="200">
+      </div>
       <div id="start-screen" class="start">
-        <h1>Coding Quiz Challenge</h1>
+        <h1>World Maps Quiz Challenge</h1>
         <p>
-          Try to answer the following code-related questions within the time
+          Try to identify the following flags within the time
           limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
         </p>
-        <button id="start">Start Quiz</button>
+        <button id="start-button">Start Quiz</button>
       </div>
 
       <div id="questions" class="hide">
         <h2 id="question-title"></h2>
-        <div id="choices" class="choices"></div>
+        <div id="choices" class="choices">
+          <button id="choice1">Option 1</button>
+          <button id="choice2">Option 2</button>
+          <button id="choice3">Option 3</button>
+        </div>
       </div>
 
       <div id="end-screen" class="hide">
@@ -41,6 +47,6 @@
 
       <div id="feedback" class="feedback hide"></div>
     </div>
-
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
